Fixed chrome overflow issues.

--- a/public/LESS_FILES/overrides.less
+++ b/public/LESS_FILES/overrides.less
@@ -41,6 +41,8 @@
 
 #header {
     padding: 0;
+    overflow: hidden;
+    -webkit-transform: translateZ(0);
 
     & > div {
         display: block;
@@ -350,8 +352,7 @@ aside nav ul li.active > a:before {
 }
 
 nav ul li {
-    overflow: visible;
-    
+   -webkit-transform: translateZ(0); 
 }
     
 #hide-menu {
